--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -383,19 +383,19 @@ title extraction methods supported are:
 
 @enumerate
 @item
-@samp{'title}: This extracts the title using the file @samp{#+TITLE} property
+@samp{'title}: This extracts the title using the file @samp{#+title} property
 @item
 @samp{'headline}: This extracts the title from the first headline in the Org file
 @item
-@samp{'alias}: This extracts a list of titles using the @samp{#ROAM_ALIAS} property.
+@samp{'alias}: This extracts a list of titles using the @samp{#+roam_alias} property.
 The aliases are space-delimited, and can be multi-worded using quotes
 @end enumerate
 
 Take for example the following org file:
 
 @example
-#+TITLE: World War 2
-#+ROAM_ALIAS: "WWII" "World War II"
+#+title: World War 2
+#+roam_alias: "WWII" "World War II"
 
 * Headline
 @end example
@@ -434,7 +434,7 @@ extraction methods supported are:
 
 @enumerate
 @item
-@samp{'prop}: This extracts tags from the @samp{#+ROAM_TAGS} property. Tags are space delimited, and can be multi-word using double quotes.
+@samp{'prop}: This extracts tags from the @samp{#+roam_tags} property. Tags are space delimited, and can be multi-word using double quotes.
 @item
 @samp{'all-directories}: All sub-directories relative to @samp{org-roam-directory} are
 extracted as tags. That is, if a file is located at relative path
@@ -464,8 +464,8 @@ Refs are unique identifiers for files. Each note can only have 1 ref.
 For example, a note for a website may contain a ref:
 
 @example
-#+TITLE: Google
-#+ROAM_KEY: https://www.google.com/
+#+title: Google
+#+roam_key: https://www.google.com/
 @end example
 
 These keys come in useful for when taking website notes, using the
@@ -475,8 +475,8 @@ Alternatively, add a ref for notes for a specific paper, using its
 @uref{https://github.com/jkitchin/org-ref, org-ref} citation key:
 
 @example
-#+TITLE: Neural Ordinary Differential Equations
-#+ROAM_KEY: cite:chen18_neural_ordin_differ_equat
+#+title: Neural Ordinary Differential Equations
+#+roam_key: cite:chen18_neural_ordin_differ_equat
 @end example
 
 The backlinks buffer will show any cites of this key: e.g.
@@ -527,7 +527,7 @@ the default template, reproduced below.
 ("d" "default" plain (function org-roam--capture-get-point)
      "%?"
      :file-name "%<%Y%m%d%H%M%S>-$@{slug@}"
-     :head "#+TITLE: $@{title@}\n"
+     :head "#+title: $@{title@}\n"
      :unnarrowed t)
 @end lisp
 
@@ -594,7 +594,7 @@ directly to provide its third argument to specify UTC@.
 ("d" "default" plain (function org-roam--capture-get-point)
      "%?"
      :file-name "%(format-time-string \"%Y-%m-%d--%H-%M-%SZ--$@{slug@}\" (current-time) t)"
-     :head "#+TITLE: $@{title@}\n"
+     :head "#+title: $@{title@}\n"
      :unnarrowed t)
 @end lisp
 
@@ -1056,7 +1056,10 @@ settings:
 
 where @samp{template} is the template key for a template in
 @samp{org-roam-capture-ref-templates} (see @ref{The Templating System}). These templates
-should contain a @samp{#+ROAM_KEY: $@{ref@}} in it.
+should contain a @samp{#+roam_key: $@{ref@}} in it.
+
+@node Daily Notes
+@chapter @strong{TODO} Daily Notes
 
 @node Diagnosing and Repairing Files
 @chapter Diagnosing and Repairing Files
@@ -1213,7 +1216,7 @@ to see all dated entries.
   :bind
   ("C-c n j" . org-journal-new-entry)
   :custom
-  (org-journal-date-prefix "#+TITLE: ")
+  (org-journal-date-prefix "#+title: ")
   (org-journal-file-format "%Y-%m-%d.org")
   (org-journal-dir "/path/to/org-roam-files/")
   (org-journal-date-format "%A, %d %B %Y"))
