--- a/tests/roam-files/tags/no_tag.org
+++ b/tests/roam-files/tags/no_tag.org
@@ -1,3 +1,3 @@
-#+TITLE: Tagless File
+#+title: Tagless File
 
-This file has no tags, and should not yield any tags on extracting via =#+ROAM_TAGS=.
+This file has no tags, and should not yield any tags on extracting via ~#+roam_tags~.
