--- a/tests/roam-files/tags/tag.org
+++ b/tests/roam-files/tags/tag.org
@@ -1,4 +1,4 @@
-#+ROAM_TAGS: "t1" "t2 with space" t3
-#+TITLE: Tags
+#+roam_tags: "t1" "t2 with space" t3
+#+title: Tags
 
 This file is used to test functionality for =(org-roam--extract-tags)=
