--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -277,8 +277,8 @@ is used in place of the titles for completions.
 
 If you wish to add your own title extraction method, you may push a symbol
 ='foo= into =org-roam-title-sources=, and define a
-=org-roam--extract-titles-foo= which accepts no arguments. See
-=org-roam--extract-titles-title= for an example.
+=org-roam--extract-titles-foo= which accepts the AST of the current buffer as
+argument. See =org-roam--extract-titles-title= for an example.
 
 ** Tags
 
@@ -307,8 +307,8 @@ extraction methods, you may modify =org-roam-tag-sources=:
 
 If you wish to add your own tag extraction method, you may push a symbol ='foo=
 into =org-roam-tag-sources=, and define a =org-roam--extract-tags-foo= which
-accepts the absolute file path as its argument. See
-=org-roam--extract-tags-prop= for an example.
+accepts the absolute file path, and the AST of the current buffer as its
+argument. See =org-roam--extract-tags-prop= for an example.
 
 ** File Refs
 
