--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -1060,14 +1060,11 @@ javascript:location.href =
 + encodeURIComponent(document.title)
 @end example
 
-or as a keybinding in @code{qutebrowser}, adding the following to the @code{autoconfig.yml} file:
+or as a keybinding in @code{qutebrowser} in , using the @code{config.py} file (see
+@uref{https://github.com/qutebrowser/qutebrowser/blob/master/doc/help/configuring.asciidoc, Configuring qutebrowser}):
 
 @example
-settings:
-  bindings.commands:
-    global:
-      normal:
-        gc: open javascript:void(location.href='org-protocol://roam-ref?template=r&ref='+encodeURIComponent(location.href)+'&title='+encodeURIComponent(document.title))
+config.bind("<Ctrl-r>", "spawn bash -c 'emacsclient \"org-protocol://roam-ref?template=r&ref=@{url:pretty@}&title=@{title@}\" '")
 @end example
 
 where @code{template} is the template key for a template in
