(docs): fix qutebrowser roam-protocol binding

--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -821,7 +821,7 @@ or as a keybinding in ~qutebrowser~ in , using the ~config.py~ file (see
 [[https://github.com/qutebrowser/qutebrowser/blob/master/doc/help/configuring.asciidoc][Configuring qutebrowser]]):
 
 #+BEGIN_SRC python
-config.bind("<Ctrl-r>", "spawn bash -c 'emacsclient \"org-protocol://roam-ref?template=r&ref={url:pretty}&title={title}\" '")
+  config.bind("<Ctrl-r>", "open javascript:location.href='org-protocol://roam-ref?template=r&ref='+encodeURIComponent(location.href)+'&title='+encodeURIComponent(document.title)")
 #+END_SRC
 
 where ~template~ is the template key for a template in
