--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -349,8 +349,9 @@ The backlinks buffer will show any cites of this key: e.g.
 [[file:images/org-ref-citelink.png]]
 * The Templating System
 
-Rather than creating blank files on =org-roam-insert= and =org-roam-find-file=, it
-may be desirable to prefill the file with templated content. This may include:
+Rather than creating blank files on ~org-roam-insert~ and ~org-roam-find-file~,
+it may be desirable to prefill the file with templated content. This may
+include:
 
 - Time of creation
 - File it was created from
@@ -358,15 +359,17 @@ may be desirable to prefill the file with templated content. This may include:
 - Any other data you may want to input manually
 
 This requires a complex template insertion system. Fortunately, Org ships with a
-powerful one: =org-capture=. However, org-capture was not designed for such use.
-Org-roam abuses =org-capture=, extending its syntax. To first understand how
-org-roam's templating system works, it may be useful to look into basic usage of
-=org-capture=.
+powerful one: ~org-capture~ (see info:org#capture). However, org-capture was not
+designed for such use. Org-roam abuses ~org-capture~, extending its syntax and
+capabilities. To first understand how org-roam's templating system works, it may
+be useful to look into basic usage of ~org-capture~.
 
-Org-roam's templates can be customized by modifying the variable
-=org-roam-capture-templates=. Just like the base =org-capture= this variable can
-contain multiple templates, in which case you will be prompted on which one to
-use when capturing a new note.
+For these reasons, Org-roam capture templates are not compatible with regular
+~org-capture~. Hence, Org-roam's templates can be customized by instead
+modifying the variable ~org-roam-capture-templates~. Just like
+~org-capture-templates~, ~org-roam-capture-templates~ can contain multiple
+templates. If ~org-roam-capture-templates~ only contains one template, there
+will be no prompt for template selection.
 
 ** Template Walkthrough
 
