(docs): clarify org-roam-completion-system

--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -645,15 +645,19 @@ This setting excludes all files whose path contain "private" or "dailies".
 
 * Org-roam Completion System
 
-Org-roam offers completion when choosing note titles etc. The completion
-system is configurable. The default setting,
+Org-roam allows customization of which minibuffer completion system to use for
+its interactive commands. The default setting uses Emacs' standard
+~completing-read~ mechanism.
 
 #+BEGIN_SRC emacs-lisp
   (setq org-roam-completion-system 'default)
 #+END_SRC
 
-uses Emacs' standard ~completing-read~. If you prefer
-[[https://emacs-helm.github.io/helm/][Helm]], use
+If you have installed Helm or Ivy, and have their modes enabled, under the
+~'default~ setting they will be used.
+
+In the rare scenario where you use Ivy globally, but prefer [[https://emacs-helm.github.io/helm/][Helm]] for org-roam
+commands, set:
 
 #+BEGIN_SRC emacs-lisp
   (setq org-roam-completion-system 'helm)
