--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -1151,7 +1151,8 @@ variable using directory-local variables. This is what ~.dir-locals.el~ may
 contain:
 
 #+BEGIN_SRC emacs-lisp
-  ((nil . ((org-roam-directory . "/path/to/here/"))))
+    ((nil . ((org-roam-directory . ".")
+             (org-roam-db-location . "./org-roam.db"))))
 #+END_SRC
 
 All files within that directory will be treated as their own separate
